<?xml version="1.0"?>
<package format="2">
  <name>fields_ignition</name>
  <version>0.1.0</version>
  <description>The fields_ignition package</description>

  <maintainer email="azazdeaz@gmail.com">azazdeaz</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>python-cookiecutter-pip</depend>
  <depend>jupyter-notebook</depend>
  <depend>jupyter-nbconvert</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_image</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>
</package>
